# gcp-vm-manager

./: .gitignore  README.md  pyproject.toml  start-gui.bat  start-gui.sh
gcp_vm_manager/: __init__.py  gui.py  main.py
