[project]
name = "gcp-vm-manager"
version = "1.0.0"
description = "A Python application to manage GCP VM instances using service account authentication"
authors = [
    {name = "GCP VM Manager", email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-compute>=1.15.0",
    "google-auth>=2.0.0",
    "PySide6>=6.6.0",
]

[project.scripts]
gcp-vm-manager = "gcp_vm_manager.main:main"
gcp-vm-manager-gui = "gcp_vm_manager.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]
